# HEDB

./: .gitignore  Pipfile  README.md  data.dvc  data1.dvc  data2.dvc  man.dvc  pyproject.toml  修改0418.md  大表.csv
.dvc/: config
notebooks/: Indexes.ipynb  Stage 1 to Stage 3.ipynb  explore-data.ipynb  generate_Stage1.ipynb  index.ipynb  main.ipynb  stage 1 to 3 stu tea.ipynb  student_index.ipynb  view.ipynb  view_stage0.ipynb  大專校院分析報告指標.ipynb  教+學 long data.ipynb
notebooks/UI/data-clean/: main.ipynb
reports/desc/raw/: 學1-1.正式學籍在學學生人數-以「系(所)」統計.html  學1-2.正式學籍在學學生人數-以「校(含學制班別)」統計.html  學10.日間學制修讀雙聯學制學生數-以「系(所)」統計.html  學11.學校辦理國際合作與交流資料表-以「校」統計.html  學12-1.新生(含境外生)註冊率-以「系(所)」統計.html  學12-2.新生(含境外生)註冊率-以「校(含學制班別)」統計.html  學12-3.新生(含境外生)註冊率-以「校」統計.html  學13-1.於學年底處於休學狀態之人數-以「系(所)」統計.html  學13-2.於學年底處於休學狀態之人數-以「校(含學制班別)」統計.html  學14-1.退學人數-以「系(所)」統計.html  學14-2.退學人數-以「校(含學制班別)」統計.html  學15.在學學生參與競賽、論文出版等成效-以「校(含學制班別)」統計.html  學16.學士班以下就學穩定率-以「校(含學制班別)」統計.html  學17.獎助生及勞僱型學生兼任助理人數-以「校」統計.html  學18.學校執行工讀及生活助學金情形-以「校」統計.html  學19.兼任助理平均每月支給金額人數統計表-以「校」統計.html  學2-1.畢業生數及其取得輔系、雙主修資格人數-以「系(所)」統計.html  學2-2.畢業生數及其取得輔系、雙主修資格人數-以「校(含學制班別)」統計.html  學2-3.畢業授予學位之中英文名稱及人數表-以「系(所)」統計.html  學2-4.畢業碩、博士學位論文資料-以「系(所)」統計.html  學2-5.畢業碩、博士學位論文資料-以「校(含學制班別)」統計.html  學20.學生實習情形-以「系(所)」統計.html  學21.學生實習機構及權益保障-以「系(所)」統計.html  學3-1.境外學位生數及其在學比率-以「系(所)」統計.html  學3-2.外國學生數及其在學比率-以「系(所)」統計.html  學3-3.僑生、港澳生數及其在學比率-以「系(所)」統計.html  學3-4.大陸地區來臺學位生數及其在學比率-以「系(所)」統計.html  (+81 more)
src/: font.py
src/data/: OpenData_Uni.py  data_preparation.py  download_data.py  gen_codebook  gen_codebook.py  make_stage1.py
