[tool.poetry]
name = "hedb"
version = "0.1.0"
description = ""
authors = ["hswei0 <github.wei@mailhero.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.28.0"
notebook = "^6.5.4"
pandas = "^1.1"
numpy = "^1.23"
pathlib = "^1.0.1"
openpyxl = "^3.1.2"
pyperclip = "^1.8.2"
ydata-profiling = "4.1.2"


[tool.poetry.group.dev.dependencies]
dvc = "^2.55.0"
dagshub = "^0.2.12"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
